# notes_fastapi

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: db.py  web.py
app/static/styles/: auth.css  base.css  create_note.css  index.css  notes.css
app/templates/: auth.html  base.html  create_note.html  index.html  login_error.html  notes.html  password_error.html
